# desktop-tutorial

./: .env  .env.example  .gitignore  AGENTS.md  CONSOLIDATED_RESULTS_REPORT.md  ContentView.swift  ControlsView.swift  FOREX_RESEARCH_LAB_REPORT.md  MapCanvasView.swift  MapGenerator.swift  Package.swift  README.md  SPECIALIST_ORCHESTRATION_REPORT.md  WF_META_VALIDATION_RUN_REPORT.md  fetch_apilayer_live.py  fetch_dukascopy_history.py  package-lock.json  package.json  points.json  prototype.py  pyproject.toml  requirements.txt  run_forex_research_lab.py  run_r13_trend_gating.py  run_r14_execution_diagnostics.py  run_r14_execution_layer.py  run_r14_meta_labeling.py  run_r14_tail_selection.py  run_r15_failure_decomposition.py  run_real_data_evaluation.py  run_regime_diagnostics.py  run_regime_gated_evaluation.py  run_research_journal.py  run_strategy_promotion.py  run_strategy_research.py  run_strategy_spec.py  run_v21_refinement.py  run_v22_candidate_hardening.py  run_v23_edge_amplification.py  run_v2_evaluation.py  (+2 more)
core/: types.py  (+3 more)
forex_lab/: .gitignore  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  run_demo.py  run_prototype.py  visualization.py
forex_lab/combinations/: __init__.py  confirmation.py  engine.py  ensemble.py  sleeves.py
forex_lab/data/: __init__.py  cost_model.py  costs.py  indicators.py  loader.py  resample.py  resampler.py
forex_lab/execution/: __init__.py  engine.py
forex_lab/metrics/: __init__.py  calculator.py  compute.py  performance.py
forex_lab/orchestrators/: __init__.py  performance_based.py  regime.py  rule_based.py
forex_lab/output/: experiments.db
forex_lab/research/: __init__.py  bootstrap.py  experiment_tracker.py  param_sweep.py  parameter_sweep.py  sweep.py  tracking.py  walk_forward.py
(+234 files in other folders)
