[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forex-research-lab"
version = "0.1.0"
description = "Modular quantitative research framework for Forex strategy evaluation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy==2.4.2",
  "pandas==3.0.1",
  "matplotlib==3.10.8",
]

[tool.setuptools.packages.find]
include = ["forex_research_lab*"]
